--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
-h1, h2, p {
-    text-align: right;
-}
-body{
+body {
+    background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+  }
+  
+  h1, h2, p {
+    text-align: center;
+  }
+  
+  .menu {
+    width: 80%;
     background-color: burlywood;
-}
+    margin-left: auto;
+    margin-right: auto;
+  }
