--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,17 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
+  
+  .item p {
+    display: inline-block;
+  }
+  
+  .flavor, .dessert {
+    text-align: left;
+    width: 75%;
+  }
+  
+  .price {
+    text-align: right;
+    width: 25%
+  }
