--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,18 @@
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+    font-family: sans-serif;
+  }
+  
+  h1 {
+    font-size: 40px;
+  }
+  
+  h2 {
+    font-size: 30px;
+  }
+  
+  .established {
+    font-style: italic;
   }
   
   h1, h2, p {
@@ -11,6 +24,12 @@ body {
     background-color: burlywood;
     margin-left: auto;
     margin-right: auto;
+    padding: 20px;
+    max-width: 500px;
+  }
+  
+  h1, h2 {
+    font-family: Impact, serif;
   }
   
   .item p {
