--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 body {
     background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
     font-family: sans-serif;
+    padding: 20px;
   }
   
   h1 {
     font-size: 40px;
+    margin-top: 0;
+    margin-bottom: 15px;
   }
   
   h2 {
@@ -28,12 +31,31 @@ body {
     max-width: 500px;
   }
   
+  img {
+    display: block; 
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  hr {
+    height: 2px;
+    background-color: brown;
+    border-color: brown;
+  }
+  
+  .bottom-line {
+    margin-top: 25px;
+  }
+  
   h1, h2 {
     font-family: Impact, serif;
   }
   
   .item p {
     display: inline-block;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-size: 18px;
   }
   
   .flavor, .dessert {
@@ -44,4 +66,30 @@ body {
   .price {
     text-align: right;
     width: 25%
+  }
+  
+  /* FOOTER */
+  
+  footer {
+    font-size: 14px;
+  }
+  
+  .address {
+    margin-bottom: 5px;
+  }
+  
+  a {
+    color: black;
+  }
+  
+  a:visited {
+    color: black;
+  }
+  
+  a:hover {
+    color: brown;
+  }
+  
+  a:active {
+    color: brown;
   }
